--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build": "expo build:web"
+    "build": "expo export:web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
