--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+  "start": "npx expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -25,5 +25,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.29.0",
     "react-native-web": "~0.19.10"
+  },
+  "devDependencies": {
+    "expo-cli": "~6.0.0"
   }
 }
